Fix whitespace

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -52,7 +52,8 @@ html, body {
 /* TODO: REFACTOR */
   min-width: 100vw;
   min-width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-  min-width: fill-available;          /* https://caniuse.com/?search=fill-available */
+  min-width:         -moz-available;  /* WebKit-based browsers will ignore this. */
+  min-width:         fill-available;  /* https://caniuse.com/?search=fill-available */
 
   min-height: 100vh;
 //  min-height: -moz-available;          /* WebKit-based browsers will ignore this. */
